[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pexels"
description = "A unofficial python wrapper library for Pexels API"
keywords = ["API Wrapper", "Pexels API", "PexelsAPI"]
authors = [
    { name="Joker Hacker", email="jokerhacker.6521@protonmail.com"}
]
dynamic = ["version", "readme"]
license = { text="GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.9"',
]

[tool.setuptools.dynamic]
version = {attr = "Pexels.__version__"}
readme = {file = "README.md"}

# [project.urls]
# "Homepage" = ""
# "Bug Tracker" = ""
# "Documentation" = ""
# "Source Code" = ""