[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pexels"
description = "A unofficial python wrapper library for Pexels API"
readme = "README.md"
keywords = ["API Wrapper", "Pexels API", "PexelsAPI"]
authors = [
    { name="Joker Hacker", email="jokerhacker.6521@protonmail.com"}
]
dynamic = ["version"]
license = { text="GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.dynamic]
version = {attr = "Pexels.__version__"}

[project.urls]
"Homepage" = "https://python-pexels.readthedocs.io/en/latest/"
"Bug Tracker" = "https://python-pexels.readthedocs.io/en/latest/"
"Documentation" = "https://python-pexels.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/jk6521/py-pexels-api"